--- a/package.json
+++ b/package.json
@@ -1,8 +1,13 @@
 {
-  "name" : "blog",
+  "name" : "GIScience#1",
   "version" : "0.0.1",
-  "description" : "My minimalistic blog",
+  "description" : "Our ENGO 500 project",
+  "scripts": {
+    "start":"node server.js"
+},
   "dependencies" : {
     "mime" : "~1.2.7"
+    "ejs": "~1.0.0",
+    "express": "~4.9.8"
   }
 }
