--- a/package.json
+++ b/package.json
@@ -2,9 +2,12 @@
   "name" : "GIScience#1",
   "version" : "0.0.1",
   "description" : "Our ENGO 500 project",
+  "engines": {
+    "node": "5.5.0"
+  }
   "scripts": {
     "start":"node server.js"
-},
+  },
   "dependencies" : {
     "mime" : "~1.2.7"
   }
