--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name" : "GIScience#1",
+  "name" : "GIScience",
   "version" : "0.0.1",
   "description" : "Our ENGO 500 project",
   "dependencies" : {
